--- a/mockito/pom.xml
+++ b/mockito/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.0</version>
+        <version>3.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.vertafore</groupId>
-    <artifactId>printer</artifactId>
+    <artifactId>mockito</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>printer</name>
-    <description>printer</description>
+    <name>mockito</name>
+    <description>mockito</description>
     <url/>
     <licenses>
         <license/>
@@ -31,10 +31,6 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -43,12 +39,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.ws.rs</groupId>
-            <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>3.1.0</version> <!-- or latest -->
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
