Updated email app

--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.mail.username=${smtp.username}
 spring.mail.password=${smtp.password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
